--- a/arduino/static/landing/css/sensait.scss
+++ b/arduino/static/landing/css/sensait.scss
@@ -64,34 +64,35 @@ $screen-xl-min: 1401px;
 //      VARIABLES -  COLOR
 //############################################
 
-$color_white:  			#FFF;
-$color_black:  			#000;
-
-$color_green:  			#40b284;
-$color_yellow:  		#fdb836;
-$color_purple:  		#bf75d1;
-
-$color_gray_dark: 	#535A5B;
-$color_gray_dark_2: #353535;
-
-$color_gray_1: 	    #A0A0A0;
+$color_white:  			      #FFF;
+$color_black:  			      #000;
 
 
-$color_gray: 				#1D1E1E;
-$color_gray_2: 			#272B2C; //FOOTER
-$color_gray_3: 			#535a5b;
-$color_gray_4: 			#F4F4F4; //Fondo para el mouse over
+$color_sensait_purple:    #6c4fa2;
+$color_sensait_red:       #e7112e;
+
+$color_green:  			      #40b284;
+$color_yellow:  		      #fdb836;
+$color_purple:  		      #bf75d1;
+
+$color_gray_dark: 	      #535A5B;
+$color_gray_dark_2:       #353535;
+
+$color_gray_1: 	          #A0A0A0;
 
 
+$color_gray: 				      #1D1E1E;
+$color_gray_2: 			      #272B2C; //FOOTER
+$color_gray_3: 			      #535a5b;
+$color_gray_4: 			      #F4F4F4; //Fondo para el mouse over
+
+$color_orange:  		      #D24E15;
+$color_banregio: 		      #73243C;
 
 
-$color_orange:  		#D24E15;
-$color_banregio: 		#73243C;
+$color_black_2: 		      #2A3F50;
 
-
-$color_black_2: 		#2A3F50;
-
-$color_dark_blue: 	#34495e;
+$color_dark_blue: 	      #34495e;
 
 
 
