--- a/templates/landing/index.html
+++ b/templates/landing/index.html
@@ -42,7 +42,7 @@
 						<span class="icon icon-bar"></span>
 						<span class="icon icon-bar"></span>
 					</button>
-					<a href="#" class="navbar-brand">SENSA IT</a>
+					<a href="#" class="navbar-brand">SensaIT</a>
 				</div>
 				<div class="collapse navbar-collapse">
 					<ul class="nav navbar-nav navbar-right text-uppercase">
@@ -50,7 +50,7 @@
 						<li><a target="_self" href="#feature">Features</a></li>
 						<li><a href="#pricing" >Pricing</a></li>
 						<li><a href="./dash/main/" target="_blank">PANEL</a></li>
-						<li><a href="./logins/" target="_blank" >INICIAR SESIÓN</a></li>
+						<li><a href="logins/" target="_blank" >INICIAR SESIÓN</a></li>
 					</ul>
 				</div>
 			</div>
@@ -66,11 +66,11 @@
 							<img src="{% static 'sensait/logos/Sensait_logo_big.png' %} " class="img-responsive" alt="feature img">
               <br/><br/><br/>
 
-              <a href="logins/" target="_self" ><button type="button" class="btn btn-info btn-lg">INICIAR SESIÓN </button></a>
+							<h3>Capaz de <b>medir, registrar y visualizar </b> <br/>diferentes magnitudes físicas </h3>
               <br/>
               <br/>
 
-							<img src="{% static 'landing/imgs/software-img.png' %}   " class="img-responsive" alt="home img">
+							<img src="{% static 'landing/imgs/img_1.png' %}   " class="img-responsive" alt="Main SensaIt">
 						</div>
 						<div class="col-md-1"></div>
 					</div>
@@ -85,7 +85,7 @@
 			<div class="container">
 				<div class="row">
           <div class="col-md-12 wow fadeInUp templatemo-box" data-wow-delay="0.3s">
-            <h2 class="text-center">REAL TIME... ;) BITCHES </h2>
+            <h2 class="text-center">Mediciones en Tiempo real </h2>
             <br/><br/><br/>
             <div id="realTimeDemo"></div>
           </div>
@@ -121,19 +121,21 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-4 wow fadeInUp templatemo-box" data-wow-delay="0.3s">
-						<i class="fa fa-laptop"></i>
-						<h3 class="text-uppercase">RESPONSIVE LAYOUT</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation. </p>
+						<i class="fa fa-money"></i>
+						<h3 class="text-uppercase">Reducciones en costo</h3>
+						<p><b>SENSAIT está diseñado para reducir los costos de implementación</b> de sistemas de monitoreo de temperatura para la prevención de pérdida de perecederos. Bajo costo… mayor beneficio. </p>
 					</div>
 					<div class="col-md-4 wow fadeInUp templatemo-box" data-wow-delay="0.3s">
-						<i class="fa fa-twitter"></i>
-						<h3 class="text-uppercase">BOOTSTRAP 3.3.4</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation. </p>
+						<i class="fa fa-dashboard"></i>
+						<h3 class="text-uppercase">Alertas inteligentes</h3>
+						<p>
+							<b>Las alertas inteligentes son utilizadas vigilar todos los puntos de sensado y notificar cualquier eventualidad presentada </b>
+							permitiendo actuar de inmediato antes de perder algún activo.</p>
 					</div>
 					<div class="col-md-4 wow fadeInUp templatemo-box" data-wow-delay="0.3s">
-						<i class="fa fa-font"></i>
-						<h3 class="text-uppercase">GOOGLE FONT</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation. </p>
+						<i class="fa fa-area-chart"></i>
+						<h3 class="text-uppercase">Multi-sensado</h3>
+						<p><b>Gracias a las tecnologías utilizadas, nos permiten extender la solución</b> a niveles de alta concurrencia sensando en diferentes ubicaciones al mismo tiempo.  </p>
 					</div>
 				</div>
 			</div>
@@ -145,13 +147,14 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-6 wow fadeInLeft" data-wow-delay="0.6s">
-						<h2 class="text-uppercase">Our Software Features</h2>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-						<p><span><i class="fa fa-mobile"></i></span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-						<p><i class="fa fa-code"></i>Quis autem velis reprehenderit et quis voluptate velit esse quam.</p>
+						<h2 class="text-uppercase">Tiempo real via web</h2>
+						<p>Toda la información recibida por los sistemas SENSAIT es accesible en tiempo real.</p>
+						<p><i class="fa fa-code"></i>Via web o desde cualquier navegador mobile.</p>
+						<p><span><i class="fa fa-mobile"></i></span>Y proximamente desde su propia aplicación nativa para iOS y Android.</p>
+
 					</div>
 					<div class="col-md-6 wow fadeInRight" data-wow-delay="0.6s">
-						<img src="{% static 'landing/imgs/software-img.png' %} " class="img-responsive" alt="feature img">
+						<img src="{% static 'landing/imgs/img_1.png' %} " class="img-responsive" alt="feature img">
 					</div>
 				</div>
 			</div>
@@ -163,13 +166,12 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-6 wow fadeInUp" data-wow-delay="0.6s">
-						<img src="{% static 'landing/imgs/software-img.png' %} " class="img-responsive" alt="feature img">
+						<img src="{% static 'landing/imgs/img_4.png' %} " class="img-responsive" alt="feature img">
 					</div>
 					<div class="col-md-6 wow fadeInUp" data-wow-delay="0.6s">
-						<h2 class="text-uppercase">More of Your Software</h2>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-						<p><span><i class="fa fa-mobile"></i></span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-						<p><i class="fa fa-code"></i>Quis autem velis reprehenderit et quis voluptate velit esse quam.</p>
+						<h2 class="text-uppercase">Alcance</h2>
+						<p>El sistema tiene la capacidad de informar al usuario sobre condiciones de operación que se encuentren fuera de la norma esperado. </p>
+						<p><i class="fa fa-code"></i>interacción del operador y el entorno vía remota a través del servidor de la nube que se incluye en esta solución.</p>
 					</div>
 				</div>
 			</div>
@@ -181,54 +183,54 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12 wow bounceIn">
-						<h2 class="text-uppercase">Our Pricing</h2>
+						<h2 class="text-uppercase">Nuestros precios</h2>
 					</div>
 					<div class="col-md-4 wow fadeIn" data-wow-delay="0.6s">
 						<div class="pricing text-uppercase">
 							<div class="pricing-title">
-								<h4>Basic Plan</h4>
-								<p>$11</p>
-								<small class="text-lowercase">monthly</small>
+								<h4>Plan A</h4>
+								<p>$00</p>
+								<small class="text-lowercase">mensual</small>
 							</div>
 							<ul>
-								<li>6 GB Space</li>
-								<li>600 GB Bandwidth</li>
-								<li>60 More Themes</li>
-								<li>Lifetime Support</li>
+								<li>Equipo SensaIT</li>
+								<li>Monitoreo con 4 sensores</li>
+								<li>Acceso al panel de administración</li>
+								<li>Soporte remoto</li>
 							</ul>
-							<button class="btn btn-primary text-uppercase">Sign up</button>
+							<button class="btn btn-primary text-uppercase">Contactanos</button>
 						</div>
 					</div>
 					<div class="col-md-4 wow fadeIn" data-wow-delay="0.6s">
 						<div class="pricing active text-uppercase">
 							<div class="pricing-title">
-								<h4>Business Plan</h4>
-								<p>$22</p>
-								<small class="text-lowercase">monthly</small>
+								<h4>Plan B</h4>
+								<p>$00</p>
+								<small class="text-lowercase">mensual</small>
 							</div>
 							<ul>
-								<li>15 GB space</li>
-								<li>1,500 GB Bandwidth</li>
-								<li>150 More Themes</li>
-								<li>Lifetime Support</li>
+								<li>Equipo SensaIT</li>
+								<li>Monitoreo con 8 sensores</li>
+								<li>Acceso al panel de administración</li>
+								<li>Soporte presencial</li>
 							</ul>
-							<button class="btn btn-primary text-uppercase">Sign up</button>
+							<button class="btn btn-primary text-uppercase">Contactanos</button>
 						</div>
 					</div>
 					<div class="col-md-4 wow fadeIn" data-wow-delay="0.6s">
 						<div class="pricing text-uppercase">
 							<div class="pricing-title">
-								<h4>Pro Plan</h4>
-								<p>$33</p>
-								<small class="text-lowercase">monthly</small>
+								<h4>Plan C</h4>
+								<p>$00</p>
+								<small class="text-lowercase">mensual</small>
 							</div>
 							<ul>
-								<li>35 GB space</li>
-								<li>3,500 GB bandwidth</li>
-								<li>350 more themes</li>
-								<li>Lifetime Support</li>
+								<li>Equipo SensaIT</li>
+								<li>Monitoreo con 6 sensores</li>
+								<li>Acceso al panel de administración</li>
+								<li>Soporte presencial</li>
 							</ul>
-							<button class="btn btn-primary text-uppercase">Sign Up</button>
+							<button class="btn btn-primary text-uppercase">Contactanos</button>
 						</div>
 					</div>
 				</div>
@@ -241,12 +243,12 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-6 wow fadeInLeft" data-wow-delay="0.6s">
-						<h2 class="text-uppercase">Download Our Software</h2>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation. </p>
+						<h2 class="text-uppercase">Conocenos</h2>
+						<p>SensaIT es un sistema de medición altamente confiable con interfaz sencilla e intuitiva.( Su interfaz táctil permite una configuración rápida y segura para garantizar un óptimo monitoreo del entorno deseado ) </p>
 						<button class="btn btn-primary text-uppercase"><i class="fa fa-download"></i> Download</button>
 					</div>
 					<div class="col-md-6 wow fadeInRight" data-wow-delay="0.6s">
-						<img src="{% static 'landing/imgs/software-img.png' %} " class="img-responsive" alt="feature img">
+						<img src="{% static 'landing/imgs/img_5.png' %} " class="img-responsive" alt="feature img">
 					</div>
 				</div>
 			</div>
@@ -259,15 +261,15 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-6 wow fadeInUp" data-wow-delay="0.6s">
-							<h2 class="text-uppercase">Contact Us</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation. </p>
+							<h2 class="text-uppercase">Contactanos</h2>
+							<p></p>
 							<address>
-								<p><i class="fa fa-map-marker"></i>36 Street Name, City Name, United States</p>
-								<p><i class="fa fa-phone"></i> 010-010-0110 or 020-020-0220</p>
-								<p><i class="fa fa-envelope-o"></i> info@company.com</p>
+								<p><i class="fa fa-map-marker"></i>Panthea ADU - Volcán Peña Nevada #2345 Col. El Colli UrbanoZapopan, Jal. CP 40570</p>
+								<p><i class="fa fa-phone"></i> 33+1380-0634 y 350</p>
+								<p><i class="fa fa-envelope-o"></i>sergio.olvera@adumx.com</p>
 							</address>
 						</div>
-						<div class="col-md-6 wow fadeInUp" data-wow-delay="0.6s">
+						<div class="col-md-6 wow fadeInUp hidden" data-wow-delay="0.6s">
 							<div class="contact-form">
 								<form action="#" method="post">
 									<div class="col-md-6">
@@ -298,7 +300,7 @@
 		<footer>
 			<div class="container">
 				<div class="row">
-					<p>Copyright © 2084 Your Company Name</p>
+					<p>Copyright © 2017 Panthea ADU</p>
 				</div>
 			</div>
 		</footer>
