--- a/templates/landing/index.html
+++ b/templates/landing/index.html
@@ -8,7 +8,7 @@
     	http://www.templatemo.com/tm-446-boxer
     	-->
 		<meta charset="utf-8">
-		<title>SENSA IT -  ADU</title>
+		<title>SENSA IT -  ADU PANTHEA</title>
 		<meta http-equiv="X-UA-Compatible" content="IE=Edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="keywords" content="">
@@ -42,15 +42,15 @@
 						<span class="icon icon-bar"></span>
 						<span class="icon icon-bar"></span>
 					</button>
-					<a href="#" class="navbar-brand">SensaIT</a>
+					<a href="#home" class="navbar-brand">SensaIT</a>
 				</div>
 				<div class="collapse navbar-collapse">
 					<ul class="nav navbar-nav navbar-right text-uppercase">
-						<li><a href="#home">Home</a></li>
-						<li><a target="_self" href="#feature">Features</a></li>
-						<li><a href="#pricing" >Pricing</a></li>
-						<li><a href="./dash/main/" target="_blank">PANEL</a></li>
-						<li><a href="logins/" target="_blank" >INICIAR SESIÓN</a></li>
+						<li><a href="#demo">Demo</a></li>
+						<li><a href="#feature" >Funcionalidades</a></li>
+						<li><a href="#pricing" >Precios</a></li>
+						<li><a href="#contact" target="">Contacto</a></li>
+						<!-- <li><a  target="" href="logins/"> PANEL</a></li> -->
 					</ul>
 				</div>
 			</div>
@@ -64,10 +64,12 @@
 						<div class="col-md-1"></div>
 						<div class="col-md-10 wow fadeIn" data-wow-delay="0.3s">
 							<img src="{% static 'sensait/logos/Sensait_logo_big.png' %} " class="img-responsive" alt="feature img">
-              <br/><br/><br/>
+              <br/><br/>
 
 							<h3>Capaz de <b>medir, registrar y visualizar </b> <br/>diferentes magnitudes físicas </h3>
+
               <br/>
+							<a href="/logins/" target="_self"> <button class="btn btn-info text-uppercase"> Iniciar Sesión</button></a>
               <br/>
 
 							<img src="{% static 'landing/imgs/img_1.png' %}   " class="img-responsive" alt="Main SensaIt">
@@ -80,7 +82,7 @@
 		<!-- end home -->
 
     <!-- start divider -->
-		<section id="realTime">
+		<section id="demo">
       <br/>
 			<div class="container">
 				<div class="row">
@@ -117,7 +119,7 @@
     <hr/>
 
 		<!-- start divider -->
-		<section id="divider">
+		<section id="feature">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-4 wow fadeInUp templatemo-box" data-wow-delay="0.3s">
@@ -143,7 +145,7 @@
 		<!-- end divider -->
 
 		<!-- start feature -->
-		<section id="feature">
+		<section >
 			<div class="container">
 				<div class="row">
 					<div class="col-md-6 wow fadeInLeft" data-wow-delay="0.6s">
@@ -188,9 +190,9 @@
 					<div class="col-md-4 wow fadeIn" data-wow-delay="0.6s">
 						<div class="pricing text-uppercase">
 							<div class="pricing-title">
-								<h4>Plan A</h4>
-								<p>$00</p>
-								<small class="text-lowercase">mensual</small>
+								<h4>Venta</h4>
+								<p></p>
+								<small class="text-lowercase">contado</small>
 							</div>
 							<ul>
 								<li>Equipo SensaIT</li>
@@ -204,9 +206,9 @@
 					<div class="col-md-4 wow fadeIn" data-wow-delay="0.6s">
 						<div class="pricing active text-uppercase">
 							<div class="pricing-title">
-								<h4>Plan B</h4>
-								<p>$00</p>
-								<small class="text-lowercase">mensual</small>
+								<h4>Financiamiento </h4>
+								<p></p>
+								<small class="text-lowercase">6 y 12 meses</small>
 							</div>
 							<ul>
 								<li>Equipo SensaIT</li>
@@ -220,8 +222,8 @@
 					<div class="col-md-4 wow fadeIn" data-wow-delay="0.6s">
 						<div class="pricing text-uppercase">
 							<div class="pricing-title">
-								<h4>Plan C</h4>
-								<p>$00</p>
+								<h4>Renta </h4>
+								<p></p>
 								<small class="text-lowercase">mensual</small>
 							</div>
 							<ul>
@@ -245,7 +247,7 @@
 					<div class="col-md-6 wow fadeInLeft" data-wow-delay="0.6s">
 						<h2 class="text-uppercase">Conocenos</h2>
 						<p>SensaIT es un sistema de medición altamente confiable con interfaz sencilla e intuitiva.( Su interfaz táctil permite una configuración rápida y segura para garantizar un óptimo monitoreo del entorno deseado ) </p>
-						<button class="btn btn-primary text-uppercase"><i class="fa fa-download"></i> Download</button>
+						<a href="#contact"> <button   class="btn btn-primary text-uppercase"><i class="fa fa-download"></i> Contacto</button></a>
 					</div>
 					<div class="col-md-6 wow fadeInRight" data-wow-delay="0.6s">
 						<img src="{% static 'landing/imgs/img_5.png' %} " class="img-responsive" alt="feature img">
@@ -266,7 +268,7 @@
 							<address>
 								<p><i class="fa fa-map-marker"></i>Panthea ADU - Volcán Peña Nevada #2345 Col. El Colli UrbanoZapopan, Jal. CP 40570</p>
 								<p><i class="fa fa-phone"></i> 33+1380-0634 y 350</p>
-								<p><i class="fa fa-envelope-o"></i>sergio.olvera@adumx.com</p>
+								<p><i class="fa fa-envelope-o"></i>hola@adumx.com</p>
 							</address>
 						</div>
 						<div class="col-md-6 wow fadeInUp hidden" data-wow-delay="0.6s">
