REPORTE - Ajuste formato nuevo :)

--- a/client/templates/client/user_dashboard.html
+++ b/client/templates/client/user_dashboard.html
@@ -333,7 +333,7 @@
           var dataKey     = data[i].sensors[j].data_key;
           var sensID      = data[i].sensors[j].id;
 
-          if(dataKey === "field2")
+          if(dataKey === "field3" || dataKey === "field2")
             epochID = sensID;
 
           if(dataKey === "field1"){
