FRONT - Reports, views,  URLS and stuff

--- a/client/templates/client/user_iots.html
+++ b/client/templates/client/user_iots.html
@@ -49,7 +49,7 @@
                     <dd>{{ arduino.sensors.count | add:"-1" }} </dd>
 
                     {% comment %}
-                    <dt>Estatus</dt>
+                    <dt>Estado</dt>
                     <dd><span class="label label-success">Correcto</span></dd>
                     <dt>Epoch</dt>
                     {% for sensor in arduino.arduino_sensors.all %}
