--- a/client/templates/client/user_selected_sensor.html
+++ b/client/templates/client/user_selected_sensor.html
@@ -44,7 +44,9 @@
         <b> Sensor: </b> {{arduinosensor}}
         <small>
           Transmisor: <b>{{arduinosensor.arduino.name}}</b>
+          Modelo: <b>{{ arduinosensor.arduino.modelo_transmisor }}</b>
           Tipo Sensor: <b>{{ arduinosensor.sensor_type.name }}</b>
+
         </small>
       </h1>
     </section>
