--- a/dashboard/templates/admin/admin_arduino_detail.html
+++ b/dashboard/templates/admin/admin_arduino_detail.html
@@ -72,7 +72,7 @@
                 {{arduino.updated_at }}
             </dd>
 
-            <dt>ESTATUS</dt>
+            <dt>Estado</dt>
             <dd>
                 <b>{{arduino.get_estatus_display }}</b>
             </dd>
