--- a/dashboard/templates/admin/admin_enterprise_detail.html
+++ b/dashboard/templates/admin/admin_enterprise_detail.html
@@ -49,7 +49,7 @@
               <a href="https://goo.gl/maps/vtgW1R9woGL2" target="_blank"> Ver en mapa</a>
             </dd>
 
-            <dt>Estatus de la empresa:</dt>
+            <dt>Estado de la empresa:</dt>
             <dd><b>
               {{enterprise.get_estatus_display}}
             </b></dd>
