--- a/dashboard/templates/admin/admin_enterprise_list.html
+++ b/dashboard/templates/admin/admin_enterprise_list.html
@@ -30,7 +30,7 @@
                   <th>Empresa ID</th>
                   <th>Nombre</th>
                   <th>Ciudad</th>
-                  <th>Estatus</th>
+                  <th>Estado</th>
                   <th>Accion</th>
                 </tr>
               </thead>
