--- a/dashboard/templates/admin/admin_projects_detail.html
+++ b/dashboard/templates/admin/admin_projects_detail.html
@@ -59,7 +59,7 @@
               <th>Sistema ID</th>
               <th>Nombre Sistema </th>
               <th>Ubicación</th>
-              <th>Estatus</th>
+              <th>Estado</th>
               <th align="center">Acciones</th>
             </tr>
           </thead>
