--- a/client/templates/client/backup_user_dashboard.html
+++ b/client/templates/client/backup_user_dashboard.html
@@ -66,7 +66,7 @@
                       <th>ID Proyecto</th>
                       <th>Nombre</th>
                       <th>No. de IoTs</th>
-                      <th>Estatus</th>
+                      <th>Estado</th>
                       <th>Accion</th>
                     </tr>
                   </thead>
