--- a/client/templates/client/user_systemstatus.html
+++ b/client/templates/client/user_systemstatus.html
@@ -22,7 +22,7 @@
     <!-- Content Header (Page header) -->
   <section class="content-header">
     <h1>
-      ESTATUS DE LOS TRANSMISORES
+      ESTADO DE TRANSMISORES - WIP
     </h1>
   </section>
 
