--- a/templates/main_header.html
+++ b/templates/main_header.html
@@ -300,10 +300,9 @@
           <i class="fa fa-angle-left pull-right"></i>
         </a>
         <ul class="treeview-menu" style="display: none;">
-          <li><a href="{% url 'ticket:ticket-list' %}"><i class="fa fa-laptop"></i> <span>Alertas</span></a></li>
-          <li><a href="{% url 'ticket:ticket-list' %}"><i class="fa fa-laptop"></i> <span>Reportes</span></a></li>
-          <li><a href="{% url 'ticket:ticket-list' %}"><i class="fa fa-laptop"></i> <span>Observaciones</span></a></li>
-          <li><a href="{% url 'ticket:ticket-list' %}"><i class="fa fa-laptop"></i> <span>Acciones correctivas</span></a></li>
+          <li><a href="{% url 'alertObservationList' %}"><i class="fa fa-laptop"></i> <span>Alertas</span></a></li>
+          <li><a href="{% url 'alertObservationList' %}"><i class="fa fa-laptop"></i> <span>Reportes</span></a></li>
+          <li><a href="{% url 'alertObservationList' %}"><i class="fa fa-laptop"></i> <span>Observaciones & Acciones</span></a></li>
         </ul>
       </li>
       {% comment %}
