--- a/client/templates/client/user_dashboard.html
+++ b/client/templates/client/user_dashboard.html
@@ -10,6 +10,50 @@
     display:block;
     clear:both;
   }
+  .card-ok{
+    background: #088049;
+  }
+  .card-alert{
+    background: #AE4A3A;
+  }
+
+  .cards-base{
+    width: 250px;
+    display:inline-block;
+    margin:5px;
+    border-radius: 25px;
+  }
+  .card-txt-sensor{
+    font-size: 14px;
+    font-weight: bold;
+    color:white;
+    width: 100%;
+    display: block;
+    text-align: center;
+  }
+  .card-txt-data{
+    font-size: 34px;
+    font-weight: bold;
+    color:white;
+    width: 100%;
+    display: block;
+    text-align: center;
+  }
+  .card-txt-minmax{
+    font-size: 16px;
+    color:white;
+    width: 47%;
+    display: inline-block;
+    text-align: center;
+    padding-bottom: 10px;
+  }
+  .card-txt-date{
+    font-size: 16px;
+    color:white;
+    width: 100%;
+    display: block;
+    text-align: right;
+  }
 </style>
 
 {% endblock content_css %}
@@ -30,10 +74,9 @@
   <!-- Main content -->
   <section class="content">
 
-    <!-- /.Div para los transmisores y sus respectivos sensores. -->
-    <div id="transmisores" class="">
-    </div>
-
+  <!-- /.Div para los transmisores y sus respectivos sensores. -->
+  <div id="transmisores" class="">
+  </div>
 
   <div id="canChangeProject" class="row">
     <div class="col-md-12">
@@ -49,7 +92,6 @@
           </div>
         </div>
         <!-- /.box-header -->
-
         <div class="box-body">
           <div id ="my_projects" class="table">
             <table id="table_projects"  class="table no-margin">
@@ -326,7 +368,6 @@
   }
 
   function dataProjectCallBack( data ){
-    console.log("holo");
     console.log(data);
     $('#transmisores').html(" ");
 
@@ -338,40 +379,46 @@
         var epochData  = " ";
         var epochID    = 0 ;
 
+        epoch_div = "";
+
         for( var j = 0; j < data[i].sensors.length ; j++){
           var description = data[i].sensors[j].description;
           var dataKey     = data[i].sensors[j].data_key;
           var sensID      = data[i].sensors[j].id;
 
-          if(dataKey == "field3" || dataKey == "field2")
-            epochID = sensID;
+          //if(dataKey == "field3" || dataKey == "field2")
+          epochID = sensID;
 
           if(dataKey === "field1"){
             epochID = sensID;
           }else{
+            epoch_div += "epoch_"+sensID+" ";
             blocksData +=
-            '<tr id="row_'+sensID+'">'+
-                '<td>'+
+            '<div class="cards-base small-box card-ok" id="row_'+sensID+'">'+
+              '<div class="inner">'+
+                '<div class="card-txt-sensor">'+
                   description+
-                '</td>'+
-                '<td align="">'+
-                  '<span id=min_'+sensID +' class="info-box-text">'+
-                    '0'+
+                '</div>'+
+                '<div class="card-txt-data" id=sens_'+sensID +'>'+
+                '0 &#176;'+
+                '</div>'+
+                '<div class="card-txt-minmax" >'+
+                  '<span id=min_'+sensID +'>'+
                   '&#176;</span>'+
-                '</td>'+
-                '<td align="">'+
-                  '<span id=sens_'+sensID +' class="info-box-number">0'+
+                  '<br/>'+
+                  'min.'+
+                '</div>'+
+                '<div class="card-txt-minmax" >'+
+                  '<span id=max_'+sensID +'>'+
                   '&#176;</span>'+
-                '</td>'+
-                '<td align="">'+
-                  '<span id=max_'+sensID +' class="info-box-text">'+
-                    '0'+
-                  '&#176;</span>'+
-                '</td>'+
-                '<td align="center">'+
-                  '<a href="/dash/sensor/'+sensID+'" target="_self"><button type="button" class="btn btn-success">Gráfica</button></a>'
-                '</td>'+
-              '</tr>';
+                  '<br/>'+
+                  'max.'+
+                '</div>'+
+              '</div>'+
+              '<a href="/dash/sensor/'+sensID+'" target="_self"    class="small-box-footer">'+
+              'Ver  Grafica <i class="fa fa-dashboard"></i>'+
+              '</a>'+
+            '</div>';
           }
         }
 
@@ -384,9 +431,10 @@
                   '<h3 class="box-title">'+
                     'Proyecto: <b>'+proyectNames[_proyID] +'</b> '+
                     'Transmisor:  <b>'+data[i].name+'</b><br/>'+
-                    '<span id="epoch_'+epochID+'"> -  Ultima actualización: </span>'+
+                    '<span class="'+epoch_div+'"> -  Ultima actualización: </span>'+
                   '</h3>'+
                   '<div class="box-tools pull-right">'+
+                    '<a href="/dash/reports/'+data[i].id+'" target="_self" class="btn btn-danger">Ver Alertas</a>'+
                     '<button class="btn btn-box-tool" data-widget="collapse">'+
                       '<i class="fa fa-minus"></i>'+
                     '</button>'+
@@ -394,20 +442,17 @@
                 '</div>'+
                 '<div class="box-body">'+
                   '<div class="col-xs-12">'+
-                    '<table id="blocksens_'+sensID +'" class="table">'+
-                    '<thead><tr>'+
-                      '<th>Nombre Sensor</th>'+
-                      '<th>Valor Mínimo</th>'+
-                      '<th>Valor Actual</th>'+
-                      '<th>Valor Máximo</th>'+
-                      '<th></th>'+
-                      '</tr></thead>'+
-                      '<tbody>'+
-                      blocksData+
-                      '</tbody>'+
-                    '</table>'+
+                    '<div id="blocksens_'+sensID +'" class="">'+
+                        blocksData+
+                    '</div>'+
                   '</div>'+
                 '</div>'+
+                {% if not request.user.client %}
+                '<div class="box-footer ">'+
+                  '<a href="/dash/admin/projects/edit/'+_proyID+'" target="_self" class="btn pull-right btn-default">Editar Proyecto</a>'+
+                  '<a href="/dash/admin/iots/edit/'+data[i].id+'" target="_self" class="btn pull-right btn-default">Editar Transmisor</a>'+
+                '</div>'+
+                {% endif %}
               '</div>'+
             '</div>' +
           '</div>' +
@@ -488,20 +533,31 @@ function getSensorsFromAPI(proy_ID,sensor_ID, arduinoID,sens_info,query){
         var passData_arduinoID  = arduinoID;
 
         var passData_sensInfo   = sensInfo;
-
-        $('#sens_'+sensID).html(Number(data[0].data).toFixed(2)+'°');
+        var dataSend = Number(data[0].data);
+        $('#sens_'+sensID).html(dataSend.toFixed(2)+'°');
         var max = sensInfo.max_value;
         var min = sensInfo.min_value;
+
+        if(parseFloat(dataSend) > parseFloat(max) || parseFloat(min) > parseFloat(dataSend)){
+          $('#row_'+sensID).removeClass("card-ok");
+          $('#row_'+sensID).addClass("card-alert");
+        }else{
+          $('#row_'+sensID).addClass("card-ok");
+          $('#row_'+sensID).removeClass("card-alert");
+        }
 
         $('#min_'+sensID).html(' '+min.substring(0,(min.length-2))+'°');
         $('#max_'+sensID).html(' '+max.substring(0,(max.length-2))+'°');
 
         var epoch = data[0].epoch;
         var epochDate = convertEpoch2Date(epoch);
-        $('#epoch_'+sensID).html('Ultima Actualización:  ' + epochDate);
 
-        if(Number(data[0].data).toFixed(2) == "-127.00" )
+        $('.epoch_'+sensID).html('Ultima Actualización:  ' + epochDate);
+
+        if(Number(data[0].data).toFixed(2) == "-127.00" ){
           $('#row_'+sensID).hide();
+        }
+
 
       }else{
       }
@@ -548,17 +604,31 @@ function getSensorsFromAPI(proy_ID,sensor_ID, arduinoID,sens_info,query){
       var wsData = JSON.parse(msg);
       console.log(wsData);
 
+
       for(var i= 0 ; i < wsData.length ; i++){
         var data = wsData[i]['data'];
-
+        console.log(wsData[i]['arduino_sensor']);
         if(data == '-127.00' || data == ''){
           $('#row_'+wsData[i]['arduino_sensor']).hide();
         }else{
           var epochDate = convertEpoch2Date(wsData[i]['epoch']);
-          $('#epoch_'+wsData[i]['arduino_sensor']).html('Ultima Actualización:  ' + epochDate);
+          $('.epoch_'+wsData[i]['arduino_sensor']).html('Ultima Actualización:  ' + epochDate);
 
           $('#row_'+wsData[i]['arduino_sensor']).show();
           $('#sens_'+wsData[i]['arduino_sensor']).html(Number(data).toFixed(2) + " &#176;");
+
+          var min = $('#min_'+wsData[i]['arduino_sensor']).text();
+          var max = $('#max_'+wsData[i]['arduino_sensor']).text();
+
+          if(parseFloat(Number(data)) > parseFloat(max) || parseFloat(min) > parseFloat(Number(data))){
+            console.log(wsData[i]['arduino_sensor']+ "ehh....");
+            $('#row_'+wsData[i]['arduino_sensor']).removeClass("card-ok");
+            $('#row_'+wsData[i]['arduino_sensor']).addClass("card-alert");
+          }else{
+            console.log(wsData[i]['arduino_sensor']+ "puto....");
+            $('#row_'+wsData[i]['arduino_sensor']).addClass("card-ok");
+            $('#row_'+wsData[i]['arduino_sensor']).removeClass("card-alert");
+          }
         }
       }
     }
