FRONT - Error al borrar reporte, tabla en los mails y  reportes

--- a/client/templates/client/client_report_delete.html
+++ b/client/templates/client/client_report_delete.html
@@ -15,6 +15,7 @@
       <h1>
         BORRADO DE REPORTE:
         <b>
+          {{report.sensor.description }} -
           {{report.get_tipo_reporte_display }}
         </b>
 
