--- a/client/templates/client/client_report_list.html
+++ b/client/templates/client/client_report_list.html
@@ -21,6 +21,26 @@
 
     <div class="row">
       <div class="col-xs-12">
+        <div class="alert alert-warning alert-dismissible">
+          <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
+          <h4><i class="icon fa fa-warning"></i> !IMPORTANTE!</h4>
+          El tiempo de generación de los reportes varia dependiendo la cantidad de días y registros obtenidos.
+          <br/><br/>
+          <b>Tiempos estimados:</b><br/>
+          1-3 dias = 5 minutos<br/>
+          4 - 10 dias = 15 minutos<br/>
+          11 - 20 dias = 20 minutos<br/>
+          30 dias = 30 minutos<br/>
+          31 - 90  = 30 - 60 minutos<br/>
+          <br/>
+          <b>Favor de presionar F5 en el teclado ó  presionar el siguiente boton.</b>
+          <button id="reload" class="btn btn-danger">Recargar</button>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-xs-12">
         <div class="box">
           <div class="box-header">
             <h3 class="box-title">
@@ -31,7 +51,7 @@
             <table id="table_reports" class="table table-bordered table-striped">
               <thead>
                 <tr>
-                  <th>ID Reporte</th>
+                  <th>ID</th>
                   <th>Fecha Creación</th>
                   <th>Tipo Archivo</th>
                   <th>Tipo Reporte</th>
@@ -43,7 +63,7 @@
 
                 {% for report in report_list %}
                 <tr>
-                  <td> Reporte00{{report.id}} </td>
+                  <td> Rep-00{{report.id}} </td>
                   <td> {{report.created_at}} </td>
                   <td> {{report.get_tipo_archivo_display }} </td>
                   <td> {{report.get_tipo_reporte_display }} </td>
@@ -101,7 +121,12 @@
   <script src="{% static 'plugins/datatables/jquery.dataTables.min.js' %}"></script>
   <script src="{% static 'plugins/datatables/dataTables.bootstrap.min.js' %}"></script>
   <!-- page script -->
-<script type="application/javascript">
+  <script type="application/javascript">
+
+
+  $('#reload').click(function() {
+    location.reload();
+  });
 
   $(function () {
     $('#table_reports').DataTable({
