TOKENS...  un mismo token para gobernar a todos :D

--- a/client/templates/client/backup_user_dashboard.html
+++ b/client/templates/client/backup_user_dashboard.html
@@ -307,7 +307,7 @@
   var ws_url = 'ws://' + site_url;
 
   var urlApiBase;
-  var tokenCode ;
+  var tokenCode = 'Token d7e7f378cdc67dcd7cec11b76e017927c3e73bc3';
 
   if(site_url == 'sensait.dyndns.org'){
     tokenCode = 'Token d7e7f378cdc67dcd7cec11b76e017927c3e73bc3';
