--- a/client/templates/client/user_reports.html
+++ b/client/templates/client/user_reports.html
@@ -310,16 +310,7 @@
   console.log(site_url);
   console.log(ws_url);
   //ws_url = ws_url.replace("","");
-
-  if(site_url == 'sensait.dyndns.org'){
-    tokenCode = 'Token d7e7f378cdc67dcd7cec11b76e017927c3e73bc3';
-  }else{
-    tokenCode   = 'Token 6b4f2e70ae0d435bf512897355947fe0a564972a';
-    //Para cuando se accede desde la RED local el server
-    if( site_url == "192.168.253.31"){
-      tokenCode = 'Token d7e7f378cdc67dcd7cec11b76e017927c3e73bc3';
-    }
-  }
+  var tokenCode = 'Token d7e7f378cdc67dcd7cec11b76e017927c3e73bc3';
 
 
   $(function () {
