--- a/client/templates/client/user_alert_detail.html
+++ b/client/templates/client/user_alert_detail.html
@@ -81,7 +81,7 @@
               </h3>
             </div>
             <div class="box-body">
-              WIP - Descarga de registros en alerta del SENSOR 
+              WIP - Descarga de registros en alerta del SENSOR
             </div>
           </div>
           </div>
@@ -293,16 +293,8 @@
   console.log(site_url);
   console.log(ws_url);
   //ws_url = ws_url.replace("","");
+  var tokenCode = 'Token d7e7f378cdc67dcd7cec11b76e017927c3e73bc3';
 
-  if(site_url == 'sensait.dyndns.org'){
-    tokenCode = 'Token d7e7f378cdc67dcd7cec11b76e017927c3e73bc3';
-  }else{
-    tokenCode   = 'Token 6b4f2e70ae0d435bf512897355947fe0a564972a';
-    //Para cuando se accede desde la RED local el server
-    if( site_url == "192.168.253.31"){
-      tokenCode = 'Token d7e7f378cdc67dcd7cec11b76e017927c3e73bc3';
-    }
-  }
 
 
   $(function () {
