--- a/client/templates/client/user_selected_sensor.html
+++ b/client/templates/client/user_selected_sensor.html
@@ -320,15 +320,7 @@
     console.log(ws_url);
     //ws_url = ws_url.replace("","");
 
-    if(site_url == 'sensait.dyndns.org'){
-      tokenCode = 'Token d7e7f378cdc67dcd7cec11b76e017927c3e73bc3';
-    }else{
-      tokenCode   = 'Token 6b4f2e70ae0d435bf512897355947fe0a564972a';
-      //Para cuando se accede desde la RED local el server
-      if( site_url == "192.168.253.31"){
-        tokenCode = 'Token d7e7f378cdc67dcd7cec11b76e017927c3e73bc3';
-      }
-    }
+    var tokenCode = 'Token d7e7f378cdc67dcd7cec11b76e017927c3e73bc3';
 
     urlApi = 'http://' + site_url + '/api/arduinos/{{ arduinosensor.arduino.id }}/sensors/{{ arduinosensor.id }}/data/'
     //##############################
